test/arrays/bradc/assignArithArrToDom.good
assignArithArrToDom.chpl:5: error: assigning [domain(2,int(64),one)] real(64) to a rectangular domain
